# learning

./: .gitignore  README.md  codecamp1.py  codecamp2.py  codecamp3.py  codecamp4.py  employee.db  generatoresque.py  json_learning.py  matplotlib_learning.ipynb  numpylearn1.py  numpylearn2.py  oop1.py  oop2.py  oop2_testcode.py  pandas_learning.ipynb  plotly_tutorial.ipynb  polars.ipynb  pyproject.toml  student.py
.ipynb_checkpoints/: matplotlib_learning-checkpoint.ipynb  pandas_learning-checkpoint.ipynb
sql_tutorials/: neuralnine_sql_crashcourse.md  neuralnine_sql_script.sql  sqlite.py
taipy_course/: 1_getting_started.py  2_visual_elements.py  3_styling.css  3_styling.py  4_charts.py  5_multipage.css  5_multipage.py  chart.py
