[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab-mathjax3>=4.3.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy==1.26.4",
    "openpyxl>=3.1.2",
    "pandas==2.2.2",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "taipy>=4.1.0",
]
