[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chart-studio>=1.1.0",
    "colorlover>=0.3.0",
    "cufflinks>=0.17.3",
    "jupyterlab-mathjax3>=4.3.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "openpyxl>=3.1.2",
    "pandas>=2.2.2",
    "pandas-stubs>=2.3.0.250703",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "seaborn>=0.13.2",
    "taipy>=4.1.0",
]
